[project]
name = "pubmed-gpt"
version = "0.0.1"
description = "Summarize a pubmed topic as slides"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pubmed", "gpt", "llm"]

authors = [
  {name = "Ariel Rokem", email = "arokem@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "openai",
  "pymed",
  "click",
]

[project.urls]  # Optional
"Homepage" = "https://github.com/arokem/pubmed-gpt"

[project.scripts]
pmgpt = "pmgpt:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"